[project]
name = "cloud-map-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "boto3-stubs[ec2,lambda,route53,apigateway]>=1.34.0",
    "types-boto3>=1.0.2",
]

[dependency-groups]
dev = [
    "boto3-stubs>=1.39.14",
    "mypy>=1.17.0",
    "types-boto3>=1.39.14",
]
